# whisper

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md  whisper.install
resources/: resources.qrc
resources/linux/: whatsie.desktop  whisper.desktop
src/: AppWindow.cpp  AppWindow.h  AutostartManager.cpp  AutostartManager.h  ClientPage.cpp  ClientPage.h  Downloader.cpp  Downloader.h  PermissionHandler.cpp  PermissionHandler.h  Settings.cpp  Settings.h  SingleInstance.cpp  SingleInstance.h  WebProfileManager.cpp  WebProfileManager.h  main.cpp
src/app/: AppWindow.cpp  AppWindow.h  SettingsDialog.cpp  SettingsDialog.h  main.cpp
src/io/: Downloader.cpp  Downloader.h
src/system/: NotificationHandler.cpp  NotificationHandler.h  Settings.cpp  Settings.h  SingleInstance.cpp
src/web/: ClientPage.cpp  ClientPage.h  ReloadController.cpp  ReloadController.h  WebProfileManager.cpp
